Bug for % in user icon names